# cli-chat-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clichatappConfig.h.in  clientInfo.json  configure
.cache/clangd/index/: ChatConsole.cpp.CD00C43902030771.idx  ChatWindow.cpp.288451517F5590C8.idx  ChatWindow.hpp.52B094973438E326.idx  Client.cpp.7065204659ACC8B7.idx  Client.hpp.02F391C83FAF3F03.idx  Color.cpp.B9A3AB2B2779A967.idx  Color.hpp.6364DE0E7231B928.idx  Console.hpp.FBC1D65AC2D4597C.idx  EnetClietInitException.hpp.00EFB816B12FB0F7.idx  EnetExceptions.hpp.7103CFD8C2E2E4EF.idx  EnetInitException.hpp.C0FF4CAAE8F82F0A.idx  Server.cpp.C9120781B919EF2A.idx  User.hpp.FE245E86E3B46C5D.idx  json.hpp.24792A2A9183E795.idx  main.cpp.0867E718AFBDFB0A.idx
client/: chatConsole.cpp  chatConsole.h  chatWindow.cpp  chatWindow.h  client  client.cpp  client.h  clientInfo.json  colors.h  main  main.cpp
include/: App.hpp  BanCommand.hpp  BanList.hpp  ChTypeString.hpp  Chat.hpp  ChatMessage.hpp  ChatMode.hpp  ChatWindow.hpp  ChtypeString.hpp  Client.hpp  ClientChatHandler.hpp  ClientCommandMode.hpp  ClientDisconnectHandler.hpp  ClientInfoMessage.hpp  ClientServerMessageHandler.hpp  ClientUserColorHandler.hpp  ClientWelcomeHandler.hpp  Color.hpp  CommandList.hpp  CommandMode.hpp  Commands.hpp  ConnectCommand.hpp  Console.hpp  ConsoleMode.hpp  ConsoleWindow.hpp  Debug.hpp  DebugWindow.hpp  DisconnectMessage.hpp  EnetClietInitException.hpp  EnetExceptions.hpp  EnetInitException.hpp  ExitCommand.hpp  GeneralCommandMode.hpp  ICommand.hpp  IConsoleMode.hpp  JsonFileReader.hpp  JsonFileWriter.hpp  KickCommand.hpp  LeaveCommand.hpp  Message.hpp  (+21 more)
include/json/: json.hpp
server/: server.cpp
src/: App.cpp  BanCommand.cpp  BanList.cpp  ChTypeString.cpp  Chat.cpp  ChatMessage.cpp  ChatMode.cpp  ChatWindow.cpp  ChtypeString.cpp  Client.cpp  ClientChatHandler.cpp  ClientCommandMode.cpp  ClientDisconnectHandler.cpp  ClientInfoMessage.cpp  ClientServerMessageHandler.cpp  ClientUserColorHandler.cpp  ClientWelcomeHandler.cpp  Color.cpp  CommandMode.cpp  ConnectCommand.cpp  Console.cpp  ConsoleMode.cpp  ConsoleWindow.cpp  Debug.cpp  DebugWindow.cpp  ExitCommand.cpp  GeneralCommandMode.cpp  JsonFileReader.cpp  JsonFileWriter.cpp  KickCommand.cpp  LeaveCommand.cpp  Message.cpp  MessageHandler.cpp  MuteCommand.cpp  OpenWindowCommand.cpp  Server.cpp  ServerChatHandler.cpp  ServerCommandMode.cpp  ServerConnectionHandler.cpp  ServerMessage.cpp  (+10 more)
